# bionic-graph

./: .gitignore  Cargo.toml  README.md  REASONIX.md  fix_errors.sh  fix_sed.sh  stress_test_social_graph.py
.cargo/: config.toml
.reasonix/output/: 000-compare-graph-time_travel-with-lake.md  001-bionic-graph-design-2025-07-11.md  902-tianlongbabu-breif-intro.md  batch_load_perf_report.md  fanrenxiuxianzhuan-brief-intro.md  test-relations.md  test_keywords_time_travel.py  test_time_travel.py  v66.json
.reasonix/plans/: 000-arch-design.md  001-arch-verify.md  002-section-paragraph-graph.md  003-keyword-semantic-search.md  004-doc-extraction-refactor.md  004-frontend-ui.md  005-ui-rewrite-knowledgebase-visnetwork.md  006-cleanup-ui-improvements.md  007-settings-neural-config-search-ui.md  008-chat-input-toolbar-layout.md  009-maas-proxy-neural-fix-frontend-polish.md  010-session-comprehensive-refactor.md  011-diskgraph-integration-incremental-persistence.md  012-neural-activation-spread-enhancements.md  100-graph-rearch-design.md  101-graph-rearch-plan.md  102-graph-rearch-test-plan.md  103-graph-consistency-test-plan.md  110-web-search-plans.md  200-sdk-python-plan.md  201-sdk-python-test-plan.md  2024-06-23-search-mode-theme-doc-fields.md  2024-06-23-vertex-redolog-overhaul.md  300-examples-self-awareness-plan.md  301-example-social-activity-plan.md
.reasonix/scripts/: fix_kb_all.py  fix_kb_v3.py  fix_kb_v4.py  stress_test_social_graph.py  test_crash_consistency.py  test_search.py
.reasonix/truncated-results/: 1781877709371-4c8fdc0d-wait_for_job.txt
examples/: demo.rs
examples/self_awareness/: README.md  __init__.py  cli.py  graph_utils.py  llm.py  prompts.py  self_soul.md
examples/social_activities/: README.md  __init__.py  cli.py  graph_utils.py  llm.py  prompts.py  social_activities.md
sdk/python/: .SKILL.md.swp  SKILL.md  pyproject.toml
sdk/python/bionic_graph/: __init__.py  cli.py  client.py  exceptions.py  models.py
sdk/python/tests/: test_cli.py  test_cli_real.sh  test_client.py
src/: documents.rs  graph_manager.rs  graph_manager2.rs  lib.rs  main.rs  memory_system.rs  ui_serve.rs
src/cluster/: config.rs  forward.rs  mod.rs  node.rs  replication.rs  server.rs
(+87 files in other folders)
