[package]
name = "bionic-graph"
version = "0.1.0"
edition = "2021"
description = "Ultral fast graph indexed with bionic neural net"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1"
thiserror = "2"
uuid = { version = "1", features = ["v4"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Web server
axum = { version = "0.7", features = ["json"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors"] }
chrono = "0.4"
crc32fast = "1"
log = "0.4"
env_logger = "0.11"
reqwest = { version = "0.12", features = ["json"] }

[dev-dependencies]
tempfile = "3"
