[package]
name = "bionic-graph"
version = "0.1.0"
edition = "2021"
description = "Ultral fast graph indexed with bionic neural net"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1"
libc = "0.2"
thiserror = "2"
uuid = { version = "1", features = ["v4"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Web server
axum = { version = "0.7", features = ["json"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "fs"] }
chrono = "0.4"
crc32fast = "1"
log = "0.4"
env_logger = "0.11"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream", "blocking"] }
rust-embed = "8"
mime_guess = "2"
tokio-stream = "0.1"
futures-util = "0.3"
http-body = "1"
http-body-util = "0.1"
parking_lot = "0.12"
jieba-rs = "0.10"

[dev-dependencies]
tempfile = "3"


